# jacobmatthe.ws

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: release-backend.yml  release-website.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  config.toml.example  sqlx-data.json
backend/migrations/: 20230622062912_AddUserTable.down.sql  20230622062912_AddUserTable.up.sql  20230622063008_AddPostTable.down.sql  20230622063008_AddPostTable.up.sql  20230625024045_AddPasswordsTable.down.sql  20230625024045_AddPasswordsTable.up.sql  20230626011031_AddEmailVerificationsTable.down.sql  20230626011031_AddEmailVerificationsTable.up.sql  20230627065611_AddUploadsTable.down.sql  20230627065611_AddUploadsTable.up.sql  20230628110930_AddPostUploadsTable.down.sql  20230628110930_AddPostUploadsTable.up.sql
backend/src/: config.rs  db.rs  email.rs  errors.rs  files.rs  handlers.rs  lib.rs  main.rs
backend/src/auth/: mod.rs  passwords.rs  sessions.rs  verification.rs
backend/src/db/: email_verifications.rs  mod.rs  posts.rs  uploads.rs  user_credentials.rs  users.rs
backend/src/handlers/: auth.rs  drafts.rs  mod.rs  posts.rs  uploads.rs  users.rs
nginx/: jacobmatthe.ws.conf
website/: .gitignore  Cargo.toml  Dockerfile  config.toml  package.json  tailwind.config.js
website/src/: config.rs  errors.rs  files.rs  html.rs  lib.rs  main.rs
website/src/cms/: mod.rs  posts.rs  users.rs
website/src/components/: all_posts.rs  article.rs  code.rs  error.rs  footer.rs  header.rs  latest_posts.rs  mod.rs  page.rs  title.rs
website/src/pages/: about.rs  blog.rs  home.rs  mod.rs  now.rs  post.rs  test.rs
website/src/templates/: footer.rs  header.rs  mod.rs  page.rs
website/static/: tailwind.min.css
