[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-multipart = { version = "0.6" }
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls", "postgres", "chrono", "migrate", "uuid", "offline" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chrono = { version = "0.4", features = [ "serde"] }
uuid = { version = "1.3", features = [ "v4", "serde" ] }
crypto = { version = "0.5", features = [ "password-hash" ] }
argon2 = "0.5"
rand = { version = "0.8" }
lettre = { version = "0.10", features = [ "native-tls"] }
futures-util = "0.3.28"
toml = { version = "0.7.5" }
