[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
reqwest = { version="0.11.18", features=["json", "gzip", "native-tls"] }
serde = { version="1.0.171", features=["derive"] }
serde_json = "1.0.103"
toml = "0.7.6"
