[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = {version="0.4.26", features=["serde"]}
include_dir = "0.7.3"
reqwest = { version="0.11.18", features=["json", "gzip", "native-tls"] }
serde = { version="1.0.171", features=["derive"] }
serde_json = "1.0.103"
serde_qs = "0.12.0"
toml = "0.7.6"
